# SynthSeg

./: .gitignore  README.md  pyproject.toml
SynthSeg/: brain_generator.py  labels_to_image_model.py  predict_synthseg.py  training_qc.py
ext/lab2im/: layers.py  utils.py
scripts/tutorials/: 1-generation_visualisation.py
