[project]
name = "SynthSeg"
version = "1.0"
requires-python = ">=3.8"

dependencies = [
    "numpy>=1.24",
    "tensorflow>=2.13",
    "nibabel>=5.2.1",
    "scipy>=1.10.1"
]

[tool.setuptools]
packages = ["SynthSeg", "ext.neuron", "ext.lab2im"]

[build-system]
requires = [
    "setuptools >= 65"
]
build-backend = "setuptools.build_meta"